--- a/src/app/column/column.scss
+++ b/src/app/column/column.scss
@@ -2,7 +2,7 @@
   flex: 1 1 0;
   display: flex;
   flex-direction: column;
-  border: 1px solid var(--gray-400);
+  border: 1px solid #ccc;
   padding: 8px;
   height: 100%;
   width: 200px;
