--- a/src/app/user-story-dialog/user-story-dialog.html
+++ b/src/app/user-story-dialog/user-story-dialog.html
@@ -1,7 +1,7 @@
-<h2 mat-dialog-title>{{ data }}</h2>
+<h2 mat-dialog-title>{{ data.name }}</h2>
 <mat-dialog-content>
-  <p>Description</p>
+  <p>{{ data.description }}</p>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button matButton (click)="onNoClick()">Close</button>
+  <button matButton (click)="onNoClick()">Fermer</button>
 </mat-dialog-actions>
