--- a/src/app/table/table.scss
+++ b/src/app/table/table.scss
@@ -1,6 +1,10 @@
 .table {
   display: flex;
-  gap: 16px;
+  justify-content: space-between;
   align-items: stretch;
+
+  width: 990px;
   height: 400px;
+
+  margin: 0 auto;
 }
