--- a/src/app/table/table.html
+++ b/src/app/table/table.html
@@ -1,3 +1,8 @@
+<button matFab (click)="openAddUserStoryDialog()" extended>
+  <mat-icon>add</mat-icon>
+  Créer un ticket
+</button>
+
 <div class="table">
   @for (column of columns; track column; let idx = $index) {
 
