--- a/src/app/user-story-dialog/user-story-dialog.html
+++ b/src/app/user-story-dialog/user-story-dialog.html
@@ -1,6 +1,28 @@
 <h2 mat-dialog-title>{{ data.name }}</h2>
 <mat-dialog-content>
-  <p>{{ data.description }}</p>
+  <h3>Description</h3>
+  <div>
+    @if (!editDescription) {
+
+    <p (click)="editDescription = true" style="cursor: pointer">
+      {{ description || 'Cliquez pour ajouter une description...' }}
+    </p>
+
+    } @else {
+
+    <mat-form-field style="width: 100%">
+      <mat-label>Description</mat-label>
+      <textarea
+        matInput
+        [(ngModel)]="description"
+        (blur)="editDescription = false"
+        rows="5"
+        style="width: 100%"
+        autofocus
+      ></textarea>
+    </mat-form-field>
+    }
+  </div>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button matButton (click)="onNoClick()">Fermer</button>
