--- a/src/app/column/column.scss
+++ b/src/app/column/column.scss
@@ -2,10 +2,16 @@
   flex: 1 1 0;
   display: flex;
   flex-direction: column;
+
   border: 1px solid #ccc;
+  border-radius: 4px;
+
   padding: 8px;
+
   height: 100%;
   width: 200px;
+
+  background-color: #ececec;
 }
 
 .column-header {
