--- a/src/app/user-story/user-story.scss
+++ b/src/app/user-story/user-story.scss
@@ -1,7 +1,9 @@
 .user-story {
   padding: 2px 12px;
   margin: 4px 0;
-  background-color: #e1e1e1;
+  background-color: white;
+
+  border-radius: 4px;
 
   &:hover {
     cursor: grab;
