--- a/src/app/user-story-dialog/user-story-dialog.html
+++ b/src/app/user-story-dialog/user-story-dialog.html
@@ -4,7 +4,7 @@
   <div>
     @if (!editDescription) {
 
-    <p (click)="editDescription = true" style="cursor: pointer">
+    <p (click)="editDescription = true" class="editable-input">
       {{ description || 'Cliquez pour ajouter une description...' }}
     </p>
 
@@ -15,7 +15,6 @@
       <textarea
         matInput
         [(ngModel)]="description"
-        (blur)="editDescription = false"
         rows="5"
         style="width: 100%"
         autofocus
@@ -24,6 +23,9 @@
     }
   </div>
 </mat-dialog-content>
-<mat-dialog-actions>
-  <button matButton (click)="onNoClick()">Fermer</button>
+<mat-dialog-actions align="end">
+  <button matButton (click)="onNoClick()">Annuler</button>
+  @if(editDescription) {
+  <button matButton="filled" (click)="updateUserStory()">Mettre à jour</button>
+  }
 </mat-dialog-actions>
