--- a/src/app/user-story/user-story.html
+++ b/src/app/user-story/user-story.html
@@ -1,5 +1,5 @@
-<div cdkDrag class="user-story">
-  <h3 (click)="openDialog()">
+<div cdkDrag class="user-story" (click)="openDialog()">
+  <h3>
     {{ userStory.name }}
   </h3>
 
