--- a/src/app/table/table.scss
+++ b/src/app/table/table.scss
@@ -1,10 +1,34 @@
 .table {
+  width: 990px;
+  margin: auto;
+}
+
+.actions {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+
+  margin: 1rem 0;
+}
+
+.columns {
+  width: 100%;
+  height: 450px;
+
   display: flex;
   justify-content: space-between;
   align-items: stretch;
 
-  width: 990px;
-  height: 450px;
-
   margin: 0 auto;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  border-radius: 4px;
+
+  padding: 4px 6px;
 }
