--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Include theming for Angular Material with `mat.theme()`.
 // This Sass mixin will define CSS variables that are used for styling Angular Material
 // components according to the Material 3 design spec.
@@ -7,20 +6,19 @@
 @use '@angular/material' as mat;
 
 html {
-  @include mat.theme((
-    color: (
-      primary: mat.$azure-palette,
-      tertiary: mat.$blue-palette,
-    ),
-    typography: Roboto,
-    density: 0,
-  ));
+  @include mat.theme(
+    (
+      color: (
+        primary: mat.$azure-palette,
+        tertiary: mat.$blue-palette,
+      ),
+      typography: Roboto,
+      density: 0,
+    )
+  );
 }
 
 body {
-  // Default the application to a light color theme. This can be changed to
-  // `dark` to enable the dark color theme, or to `light dark` to defer to the
-  // user's system settings.
   color-scheme: light;
 
   // Set a default background, font and text colors for the application using
@@ -30,10 +28,33 @@ body {
   color: var(--mat-sys-on-surface);
   font: var(--mat-sys-body-medium);
 
-  // Reset the user agent margin.
   margin: 0;
 }
-/* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Segoe UI, 'Helvetica Neue', sans-serif;
+}
+
+:root {
+  --primary-color: #1809ec;
+
+  @include mat.fab-overrides(
+    (
+      container-shape: 50%,
+      container-color: rgb(68, 0, 255),
+      container-elevation-shadow: -4px -4px 5px 0px rgba(0, 0, 0, 0.5),
+      foreground-color: white,
+    )
+  );
+}
+
+.navbar-title > a,
+.navbar-links > a {
+  color: var(--mat-sys-on-surface);
+  text-decoration: none;
+}
