add empty description message

--- a/src/app/user-story-dialog/user-story-dialog.html
+++ b/src/app/user-story-dialog/user-story-dialog.html
@@ -4,7 +4,10 @@
     <div>
       @if (!editDescription) {
 
-      <div (click)="editDescription = true" [innerHTML]="description"></div>
+      <div
+        (click)="editDescription = true"
+        [innerHTML]="description ? description : 'Appuyez pour ajouter une description'"
+      ></div>
 
       } @else {
 
